// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots GenericTable playground 1`] = `
<Story
  PropTable={[Function]}
  components={
    Object {
      "a": [Function],
      "code": [Function],
      "h1": [Function],
      "h2": [Function],
      "h3": [Function],
      "h4": [Function],
      "h5": [Function],
      "h6": [Function],
      "li": [Function],
      "p": [Function],
      "ul": [Function],
    }
  }
  context={
    Object {
      "hooks": HooksContext {
        "currentContext": [Circular],
        "currentDecoratorName": null,
        "currentEffects": Array [
          Object {
            "create": [Function],
          },
        ],
        "currentHooks": Array [],
        "currentPhase": "NONE",
        "hasUpdates": false,
        "hookListsMap": WeakMap {},
        "mountedDecorators": Set {
          [Function],
          [Function],
          [Function],
          [Function],
        },
        "nextHookIndex": 0,
        "prevEffects": Array [],
        "prevMountedDecorators": Set {},
        "renderListener": [Function],
      },
      "id": "generictable--playground",
      "kind": "GenericTable",
      "name": "playground",
      "parameters": Object {
        "fileName": "/Users/amauryw/dev/commentor/frontend/src/components/GenericTable/GenericTable.stories.tsx",
        "framework": "react",
        "options": Object {
          "hierarchyRootSeparator": "|",
          "hierarchySeparator": /\\\\/\\|\\\\\\./,
        },
      },
      "story": "playground",
    }
  }
  excludedPropTypes={Array []}
  info=""
  maxPropArrayLength={3}
  maxPropObjectKeys={3}
  maxPropStringLength={50}
  maxPropsIntoLine={3}
  propTableCompare={[Function]}
  propTables={Array []}
  propTablesExclude={Array []}
  showHeader={true}
  showInline={false}
  showSource={true}
  styles={[Function]}
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <GenericTable
      columnsConfig={
        Array [
          Object {
            "columnWidth": 75,
            "index": 0,
            "key": "id",
            "name": "id",
            "renderer": [Function],
          },
          Object {
            "columnWidth": 300,
            "index": 1,
            "key": "body",
            "name": "body",
            "renderer": [Function],
          },
          Object {
            "columnWidth": 300,
            "index": 2,
            "key": "filePath",
            "name": "filePath",
            "renderer": [Function],
          },
          Object {
            "columnWidth": 300,
            "index": 3,
            "key": "url",
            "name": "url",
            "renderer": [Function],
          },
          Object {
            "columnWidth": 200,
            "index": 4,
            "key": "commentor",
            "name": "commentor",
            "renderer": [Function],
          },
          Object {
            "columnWidth": 200,
            "index": 5,
            "key": "pullRequestUrl",
            "name": "pullRequestUrl",
            "renderer": [Function],
          },
          Object {
            "columnWidth": 200,
            "index": 6,
            "key": "repositoryId",
            "name": "repositoryId",
            "renderer": [Function],
          },
          Object {
            "columnWidth": 200,
            "index": 6,
            "key": "creationDate",
            "name": "creationDate",
            "renderer": [Function],
          },
        ]
      }
      fixedColumnCount={1}
      options={Object {}}
      values={
        Array [
          Object {
            "body": "body",
            "commentor": "commentor",
            "creationDate": 1570653355068,
            "filePath": "filePath",
            "id": 1,
            "pullRequestUrl": "pullRequestUrl",
            "repositoryId": 123421,
            "requester": "requester",
            "url": "url",
          },
        ]
      }
    >
      <GenericTablestyle__Wrapper>
        <StyledComponent
          forwardedClass={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "GenericTablestyle__Wrapper-sc-13rcpxg-1",
                "isStatic": true,
                "lastClassName": "nneDj",
                "rules": Array [
                  "flex:1 1 auto;display:flex;flex-direction:column;",
                ],
              },
              "displayName": "GenericTablestyle__Wrapper",
              "render": [Function],
              "styledComponentId": "GenericTablestyle__Wrapper-sc-13rcpxg-1",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
        >
          <div
            className="GenericTablestyle__Wrapper-sc-13rcpxg-1 nneDj"
          >
            <AutoSizer
              disableHeight={false}
              disableWidth={false}
              onResize={[Function]}
              style={Object {}}
            >
              <div
                style={
                  Object {
                    "height": 0,
                    "overflow": "visible",
                    "width": 0,
                  }
                }
              >
                <MultiGrid
                  cellRenderer={[Function]}
                  classNameBottomLeftGrid=""
                  classNameBottomRightGrid=""
                  classNameTopLeftGrid=""
                  classNameTopRightGrid=""
                  columnCount={8}
                  columnWidth={[Function]}
                  enableFixedColumnScroll={true}
                  enableFixedRowScroll={true}
                  fixedColumnCount={1}
                  fixedRowCount={1}
                  height={500}
                  hideBottomLeftGridScrollbar={true}
                  hideTopRightGridScrollbar={true}
                  rowCount={3}
                  rowHeight={40}
                  scrollToColumn={0}
                  scrollToRow={0}
                  style={
                    Object {
                      "border": "1px solid #ddd",
                    }
                  }
                  styleBottomLeftGrid={Object {}}
                  styleBottomRightGrid={Object {}}
                  styleTopLeftGrid={Object {}}
                  styleTopRightGrid={Object {}}
                  width={0}
                />
              </div>
            </AutoSizer>
          </div>
        </StyledComponent>
      </GenericTablestyle__Wrapper>
    </GenericTable>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</Story>
`;

exports[`Storyshots GenericTable with empty comments 1`] = `
<Story
  PropTable={[Function]}
  components={
    Object {
      "a": [Function],
      "code": [Function],
      "h1": [Function],
      "h2": [Function],
      "h3": [Function],
      "h4": [Function],
      "h5": [Function],
      "h6": [Function],
      "li": [Function],
      "p": [Function],
      "ul": [Function],
    }
  }
  context={
    Object {
      "hooks": HooksContext {
        "currentContext": [Circular],
        "currentDecoratorName": null,
        "currentEffects": Array [
          Object {
            "create": [Function],
          },
        ],
        "currentHooks": Array [],
        "currentPhase": "NONE",
        "hasUpdates": false,
        "hookListsMap": WeakMap {},
        "mountedDecorators": Set {
          [Function],
          [Function],
          [Function],
          [Function],
        },
        "nextHookIndex": 0,
        "prevEffects": Array [],
        "prevMountedDecorators": Set {},
        "renderListener": [Function],
      },
      "id": "generictable--with-empty-comments",
      "kind": "GenericTable",
      "name": "with empty comments",
      "parameters": Object {
        "fileName": "/Users/amauryw/dev/commentor/frontend/src/components/GenericTable/GenericTable.stories.tsx",
        "framework": "react",
        "options": Object {
          "hierarchyRootSeparator": "|",
          "hierarchySeparator": /\\\\/\\|\\\\\\./,
        },
      },
      "story": "with empty comments",
    }
  }
  excludedPropTypes={Array []}
  info=""
  maxPropArrayLength={3}
  maxPropObjectKeys={3}
  maxPropStringLength={50}
  maxPropsIntoLine={3}
  propTableCompare={[Function]}
  propTables={Array []}
  propTablesExclude={Array []}
  showHeader={true}
  showInline={false}
  showSource={true}
  styles={[Function]}
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <GenericTable
      columnsConfig={
        Array [
          Object {
            "columnWidth": 75,
            "index": 0,
            "key": "id",
            "name": "id",
            "renderer": [Function],
          },
          Object {
            "columnWidth": 300,
            "index": 1,
            "key": "body",
            "name": "body",
            "renderer": [Function],
          },
          Object {
            "columnWidth": 300,
            "index": 2,
            "key": "filePath",
            "name": "filePath",
            "renderer": [Function],
          },
          Object {
            "columnWidth": 300,
            "index": 3,
            "key": "url",
            "name": "url",
            "renderer": [Function],
          },
          Object {
            "columnWidth": 200,
            "index": 4,
            "key": "commentor",
            "name": "commentor",
            "renderer": [Function],
          },
          Object {
            "columnWidth": 200,
            "index": 5,
            "key": "pullRequestUrl",
            "name": "pullRequestUrl",
            "renderer": [Function],
          },
          Object {
            "columnWidth": 200,
            "index": 6,
            "key": "repositoryId",
            "name": "repositoryId",
            "renderer": [Function],
          },
          Object {
            "columnWidth": 200,
            "index": 6,
            "key": "creationDate",
            "name": "creationDate",
            "renderer": [Function],
          },
        ]
      }
      fixedColumnCount={2}
      options={Object {}}
      values={Array []}
    >
      <GenericTablestyle__Wrapper>
        <StyledComponent
          forwardedClass={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "GenericTablestyle__Wrapper-sc-13rcpxg-1",
                "isStatic": true,
                "lastClassName": "nneDj",
                "rules": Array [
                  "flex:1 1 auto;display:flex;flex-direction:column;",
                ],
              },
              "displayName": "GenericTablestyle__Wrapper",
              "render": [Function],
              "styledComponentId": "GenericTablestyle__Wrapper-sc-13rcpxg-1",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
        >
          <div
            className="GenericTablestyle__Wrapper-sc-13rcpxg-1 nneDj"
          >
            <AutoSizer
              disableHeight={false}
              disableWidth={false}
              onResize={[Function]}
              style={Object {}}
            >
              <div
                style={
                  Object {
                    "height": 0,
                    "overflow": "visible",
                    "width": 0,
                  }
                }
              >
                <MultiGrid
                  cellRenderer={[Function]}
                  classNameBottomLeftGrid=""
                  classNameBottomRightGrid=""
                  classNameTopLeftGrid=""
                  classNameTopRightGrid=""
                  columnCount={8}
                  columnWidth={[Function]}
                  enableFixedColumnScroll={true}
                  enableFixedRowScroll={true}
                  fixedColumnCount={2}
                  fixedRowCount={1}
                  height={500}
                  hideBottomLeftGridScrollbar={true}
                  hideTopRightGridScrollbar={true}
                  rowCount={2}
                  rowHeight={40}
                  scrollToColumn={0}
                  scrollToRow={0}
                  style={
                    Object {
                      "border": "1px solid #ddd",
                    }
                  }
                  styleBottomLeftGrid={Object {}}
                  styleBottomRightGrid={Object {}}
                  styleTopLeftGrid={Object {}}
                  styleTopRightGrid={Object {}}
                  width={0}
                />
              </div>
            </AutoSizer>
          </div>
        </StyledComponent>
      </GenericTablestyle__Wrapper>
    </GenericTable>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</Story>
`;
